Improve performance of OnPlayerConnected
