# src/repository-api-abstractions/Interfaces/IPlayersApi.cs
@@ -7,6 +7,7 @@ namespace XtremeIdiots.Portal.RepositoryApi.Abstractions.Interfaces
     public interface IPlayersApi
     {
         Task<ApiResponseDto<PlayerDto>> GetPlayer(Guid playerId);
+        Task<ApiResponseDto> HeadPlayerByGameType(GameType gameType, string guid);
         Task<ApiResponseDto<PlayerDto>> GetPlayerByGameType(GameType gameType, string guid);
         Task<ApiResponseDto<PlayersCollectionDto>> GetPlayers(GameType? gameType, PlayersFilter? filter, string? filterString, int skipEntries, int takeEntries, PlayersOrder? order);
 
